# shader-time

./: .gitmodules  CMakeLists.txt  README.md
include/: material.hpp  mesh.hpp  shader.hpp  texture.hpp  vertex.hpp
src/: main.cpp  material.cpp  mesh.cpp  shader.cpp  texture.cpp
src/assets/shaders/: frag.frag  vert.vert
